fixed spacing on projects page

--- a/style.css
+++ b/style.css
@@ -243,6 +243,17 @@ section .profile-pic {
     
 }
 
+.column {
+    float: left;
+    width: 50%;
+}
+
+.row-featurette:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 section .logo {
     margin-top: 25px;    
     margin-left: 10vw;
@@ -290,6 +301,7 @@ footer {
 }
 
 .featurette-img {
+    margin-top: 5vw;
     margin-left: 17.5vw;
     margin-bottom: 50px;
     width: 30vw;    
@@ -298,9 +310,8 @@ footer {
 .lead {
     color: white;
     font-size: 1.25vw;    
-    margin-right: 17.5vw;
     width: 30vw;
-    float: right;
+    margin-left: 2.5vw;
     display: inline-block;
 }
 
@@ -353,9 +364,9 @@ footer {
     line-height: 1;
     text-align: left;
     letter-spacing: -.05rem;
-    color: white;           
-    width: 30vw;
-    margin-left: 51.5vw;   
+    color: white;       
+    margin-left: 2.5vw;
+    width: 30vw;     
 }
 
 
